--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,29 +2,29 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Shadows+Into+Light&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #89B3D1   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #FBE2DA;
-  --accent2-color: white;
+  --primary-color: #176087   ;
+  --secondary-color: #315C2B ;
+  --accent1-color: #C1292E;
+  --accent2-color: #1D84B5;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Shadows Into Light";
+  --paragraph-font: Roboto, helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --headline-color-on-white: #176087;  /* headlines on a white background */ 
+  --headline-color-on-color: #315C2B; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #176087; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #315C2B; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #176087  ;
+  --nav-link-color: #176087;
+  --nav-background-color: #C1292E;
+  --nav-hover-link-color: #315C2B;
+  --nav-hover-background-color: #176087;
 }
 
 
