--- a/positioning/positionstyles.css
+++ b/positioning/positionstyles.css
@@ -35,13 +35,14 @@
 .content2 {
   /* This is the parent of the activity 2 boxes. */
   display:grid;
+  grid-template-columns: repeat(4, 50px);
+  grid-template-rows: repeat(4,50px);
 }
 .red2 {
   width: 100px; 
   height: 100px; 
   background-color: red; 
   grid-row: 1;
-  grid-column: 1;
 } 
 .green2 { 
   width: 100px; 
@@ -49,8 +50,6 @@
   background-color: green; 
   grid-row: 2;
   grid-column: 2;
-  margin-left:-150px;
-  margin-top: -50px;
 } 
 .yellow2 {
   width: 100px; 
@@ -58,8 +57,6 @@
   background-color: gold; 
   grid-row: 3;
   grid-column: 3;
-  margin-left:-200px;
-  margin-top: -50px;
 } 
 .blue2 {
   width: 100px; 
@@ -67,8 +64,6 @@
   background-color: blue; 
   grid-row: 4;
   grid-column: 4;
-  margin-left:-250px;
-  margin-top: -50px;
 } 
 /* Activity 3 styles */ 
 .content3 {
@@ -83,14 +78,15 @@
   grid-column: 1/3;
 } 
 .green3 {
-  width: 400px; 
+  width: 375px; 
   height: 200px; 
   background-color: green;
 } 
 .yellow3 {
-  width: 400px; 
+  width: 375px; 
   height: 200px; 
   background-color: gold; 
+  margin-left: 100px;
 } 
 .blue3 {
   width: 100%;
@@ -102,25 +98,28 @@
 .content4 {
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: red; 
+  grid-row: 1/4;
 } 
 .green4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: green; 
 } 
 .yellow4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: gold; 
 } 
 .blue4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: blue; 
 } 
 /* Activity 5 styles */ 
@@ -129,50 +128,63 @@
   height: 400px;
 }
 .red5 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: green; 
-
+  float: left;
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: gold; 
 
 } 
 .blue5 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
 } 
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display: grid;
+  grid-template-columns: repeat(6, 100px);
+  grid-template-rows: repeat(6, 100px);
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: red; 
+  grid-column: 1/5;
+  grid-row: 1/3;
 } 
 .green6 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: green; 
+  grid-column: 1/3;
+  grid-row: 5/7;
+  z-index: 1;
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: gold; 
+  grid-column: 5/7;
+  grid-row: 3/7;
+  z-index: 1;
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: blue; 
+  grid-column: 2/6;
+  grid-row: 2/6;
 } 
 
 
