--- a/personal_site/styles/home.css
+++ b/personal_site/styles/home.css
@@ -8,162 +8,85 @@ nav a{
     text-align:center;
     text-decoration:none;
     padding:35px;
+    color:#fed766;
 }
 nav {
     display:flex;
     justify-content: space-around;
 }
-#hero-msg h1, #hero h4{
-    text-align:center;
-    color: white;
-}
-#hero-msg{
-    grid-column: 2/3;
-    grid-row: 1/2;
-    margin-top:100px;
-}
-.button-box{
-    text-align:center;
-}
 main section{
     text-align:center;
 }
-#background {
-    height: 725px;
-    background-color: #8ecae6;
-    grid-column: 1/11;
-    grid-row: 4/9;
-}
 body{
-    background-color: white;
+    background-color: #8c9a9e;
     font-family: 'Roboto:ital', Times, serif;
     font-size:22px;
     margin: 0;
     padding: 0;
 }
 header{
-    background-color: #fffc99;
+    background-color: #bb4430;
     display:grid;
     grid-template-columns: 150px auto;
 }
 nav a:hover{
-    background-color: #8ecae6;
+    background-color: #0b4f6c;
 }
-.book, .join{
-    background-color: #219ebc ;
-    text-decoration:none;
-    font-size: 18px;
-    padding:15px 30px;
-    margin-top:50px;
-    border-radius: 5px;
-}
-.book:hover, .join:hover{
-    background-color: #fffc99;
-}
-.msg{
-    background-color: #8ecae6;
-    font-family: 'Roboto:ital', Times, serif;
-    line-height:1.5em;
-    padding: 35px;
-    grid-column: 6/10;
-    grid-row: 6/7;
-    box-shadow: 5px 5px 10px #6f7364;
-}
+
 footer{
-    background-color: #fffc99;
+    background-color: #bb4430;
+    color:#fed766;
     padding:25px 50px;
     margin-top: 200px;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-footer a{
-    text-decoration:none;
-}
 footer .social img{
     padding-top:15px;
-}
-.icon{
-    width: 80px;
-    padding-top:10px;
 }
 .logo{
     width: 80px;
 }
-#hero-img{
-    width:100%;
-}
-#hero{
-    display:grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    margin:-100px;
-}
-#hero-box{
-    grid-column:1/4;
-    grid-row:1/3;
-    z-index: -1;
-}
-footer h3 a:hover{
-    text-decoration:underline;
+.book_img{
+    width: 50%;
 }
 .home-title{
     font-family: 'Shadows Into Light', Times, serif;
-    font-size:2em;
+    font-size:4em;
     margin-top:10px;
 }
 .home-grid{
     display:grid;
-    grid-template-columns:10, 1fr;
+    grid-template-columns:1, 1fr;
 }
 h2{
     font-family: 'Shadows Into Light', Times, serif;
-}
-.msg p{
-    padding-bottom: 35px;
 }
 #logo_link{
     padding-top:5px;
     justify-self: center;
     align-self: center;
 }
-.rivers-card, .camping-card, .rapids-card{
-    margin: 200px 0;
+.book_day, .wind, .wheel{
+    margin: 100px 0;
+    padding-left: 50px;
+    padding-right: 50px;
     
 }
-.rivers-card{
-    grid-column: 2/4;
-    grid-row: 2/3;
-}
-.camping-card{
-    grid-column: 5/7;
-    grid-row: 2/3;
-}
-.rapids-card{
-    grid-column: 8/10;
-    grid-row: 2/3;
-}
-.card-img{
+.book_img{
     border:10px solid black;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
 }
-.card-img, .mountains{
-    width: 100%;
+.book_img{
+    width: 40%;
+    margin-right: auto;
+    margin-left: auto;
 }
-.mountains{
-    grid-column: 2/7;
-    grid-row: 5/8;
-    box-shadow: 5px 5px 10px #6f7364;
-}
-main section img{
-    box-sizing:border-box;
-}
-.card-img:hover {
-    opacity: .6;
-    transform: scale(1.1);
-}
+
 @media screen and (max-width: 900px) {
-    #hero, .home-grid {
+    .home-grid {
         display: block;
         height: auto;
     }
@@ -174,30 +97,13 @@ main section img{
         display: block;
         padding: 15px;
     }
-    #hero {
-        margin-top: 0;
-    }
-    #hero-msg {
-        margin-top: 0;
-    }
-    #hero-msg h4 {
-        display: none;
-    }
     .home-title {
         font-size: 25px;
         color: #6f7364;
     }
-    .rivers-card, .camping-card, .rapids-card { 
+    .book_day, .wind, .wheel { 
         margin: 50px auto;
         width: 60%;
-    }
-    #background {
-        display: none;
-    }
-    .mountains, .msg {
-        width: 80%;
-        display: block;
-        margin: 0 auto;
     }
     footer {
         margin-top: 25px;
