--- a/personal_site/styles/home.css
+++ b/personal_site/styles/home.css
@@ -4,11 +4,32 @@
     max-width: 1600px;
     margin: 0 auto;
 }
+
 nav a{
     text-align:center;
     text-decoration:none;
     padding:35px;
     color:#fed766;
+    border-left:6px solid black;
+    border-right: 6px solid black;
+}
+h1{
+    color: #0b4f6c;
+    margin-left: 150px;
+    margin-right: 150px;
+    background-color: #bb4430;
+    border: 22px solid #bb4430;
+    border-radius:25px;
+}
+p{
+    color: #0b4f6c;
+    margin-left: 150px;
+    margin-right: 150px;
+}
+h2{
+    color:#0b4f6c;
+    margin-left: 150px;
+    margin-right: 150px;
 }
 nav {
     display:flex;
@@ -32,7 +53,6 @@ header{
 nav a:hover{
     background-color: #0b4f6c;
 }
-
 footer{
     background-color: #bb4430;
     color:#fed766;
@@ -52,7 +72,7 @@ footer .social img{
     width: 50%;
 }
 .home-title{
-    font-family: 'Shadows Into Light', Times, serif;
+    font-family: Pacifico, Times, serif;
     font-size:4em;
     margin-top:10px;
 }
@@ -71,11 +91,11 @@ h2{
 .book_day, .wind, .wheel{
     margin: 100px 0;
     padding-left: 50px;
-    padding-right: 50px;
-    
+    padding-right: 50px;  
 }
 .book_img{
     border:10px solid black;
+    border-radius: 25px;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
 }
@@ -84,7 +104,6 @@ h2{
     margin-right: auto;
     margin-left: auto;
 }
-
 @media screen and (max-width: 900px) {
     .home-grid {
         display: block;
@@ -121,8 +140,15 @@ h2{
     align-items: center;
 }
 #img_all{
+    box-shadow: 4px 4px black;
     margin-bottom: 200px;
     width: 100px;
+    border:11px solid black;
+    border-radius: 12px;
+}
+
+.book_authors{
+    color:#0b4f6c;
 }
 
 
@@ -164,6 +190,9 @@ h2{
 .brandon_link{
     margin-left: 33px;
 }
+.brandon_link:hover{
+    color: #0b4f6c;
+}
 .scott_westerfield{
     display: flex;
     justify-content: center;
@@ -173,7 +202,10 @@ h2{
     margin-top: 100px;
 }
 .scott_link{
-    margin-left: 33px;
+    margin-left: 230px;
+}
+.scott_link:hover{
+    color: #0b4f6c;
 }
 .michael_sulivan{
     display: flex;
@@ -184,7 +216,10 @@ h2{
     margin-top: 100px;
 }
 .michael_link{
-    margin-left: 33px;
+    margin-left: 120px;
+}
+.michael_link:hover{
+    color: #0b4f6c;
 }
 .china_mieville{
     display: flex;
@@ -195,7 +230,13 @@ h2{
     margin-top: 100px;
 }
 .china_link{
-    margin-left: 33px;
+    margin-left: 200px;
+}
+.china_link:hover{
+    color: #0b4f6c;
+}
+.list_authors{
+    color:#0b4f6c;
 }
 .brian_mcclellan{
     display: flex;
@@ -206,7 +247,10 @@ h2{
     margin-top: 100px;
 }
 .brian_mcclellan_link{
-    margin-left: 33px;
+    margin-left: 180px;
+}
+.brian_mcclellan_link:hover{
+    color: #0b4f6c;
 }
 .jim_butcher{
     display: flex;
@@ -217,7 +261,10 @@ h2{
     margin-top: 100px;
 }
 .jim_butcher_link{
-    margin-left: 33px;
+    margin-left: 200px;
+}
+.jim_butcher_link:hover{
+    color: #0b4f6c;
 }
 .guy_gavriel_kay{
     display: flex;
@@ -228,7 +275,10 @@ h2{
     margin-top: 100px;
 }
 .guy_kay_link{
-    margin-left: 33px;
+    margin-left: 220px;
+}
+.guy_kay_link:hover{
+    color: #0b4f6c;
 }
 .rachel_aaron{
     display: flex;
@@ -239,7 +289,10 @@ h2{
     margin-top: 100px;
 }
 .rachel_link{
-    margin-left: 33px;
+    margin-left: 270px;
+}
+.rachel_link:hover{
+    color: #0b4f6c;
 }
 .brent_weeks{
     display: flex;
@@ -248,7 +301,15 @@ h2{
     background-color:#bb4430;
     height: 200px;
     margin-top: 100px;
+    
 }
 .brent_weeks_link{
-    margin-left: 33px;
+    margin-left: 200px;
+}
+.brent_weeks_link:hover{
+    color: #0b4f6c;
+}
+.hope_works{
+    text-align: center;
+    position: relative;top:84px;
 }
